added style to verification message

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 web:
   build: .
   command: bash -c "python manage.py db upgrade && python manage.py runserver"
-  ports:
-   - "5000:5000"
+  expose:
+    - "5000"
   links:
    - redis
    - postgres
@@ -16,5 +16,4 @@ postgres:
     expose:
       - "5432"
     environment:
-      - POSTGRES_USER=root
       - POSTGRES_DB=pepper
