--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ chardet==3.0.4
 click==6.7
 cssselect==1.0.1
 cssutils==1.0.2
+decorator==4.3.0
 docutils==0.14
 Flask==0.10.1
 Flask-CDN==1.5.3
@@ -38,6 +39,7 @@ premailer==3.1.1
 psycopg2==2.7.3.1
 pycparser==2.18
 pycryptodome==3.4.7
+PyJWT==1.6.4
 python-dateutil==2.6.1
 python-dotenv==0.7.1
 python-editor==1.0.3
@@ -52,6 +54,6 @@ six==1.10.0
 SQLAlchemy==1.0.8
 structlog==17.2.0
 urllib3==1.22
+validators==0.12.2
 Werkzeug==0.10.4
 WTForms==2.1
-pyjwt
