add logging for sendgrid emails

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,9 @@ services:
         command: bash -c "python manage.py runworker"
         depends_on:
             - redis
+            - web
+        volumes:
+            - .:/app
     
     redis:
         image: redis
