--- a/app.json
+++ b/app.json
@@ -58,6 +58,10 @@
             "value": "false",
             "required": false
         },
+        "HACKATHON_NAME": {
+            "description": "Name of the hackathon this instance is hosting.",
+            "required": true
+        },
         "SENT_ACCEPTANCES": {
             "description": "A flag to indicate that the first round of acceptance emails has been sent out",
             "value": "false",
@@ -101,7 +105,7 @@
         },
         "GENERAL_INFO_EMAIL": {
             "description": "The email address to send emails as.",
-            "required": true
+            "required": false
         },
         "SLACK_TOKEN": {
             "description": "The secret token for the Slack integration used to send out announcements.",
@@ -133,6 +137,14 @@
         },
         "KEEN_WRITE_KEY": {
             "description": "Write key for Keen IO, which is used to store events",
+            "required": false
+        }, 
+        "INNOVATION_PORTAL_KEY": {
+            "description": "App id for the innovation puzzle challenge",
+            "required": false
+        },
+        "TOKEN_SEED": {
+            "description": "random seed for generating login tokens associated with innovation puzzle challenge",
             "required": false
         }
     },
